# MessageBrokerGRPC

./: Cargo.toml  README.md  build.rs  logs.txt
proto/: MessageBroker.proto  messageBroker.proto
src/: cliente.rs  message_broker.rs  server.rs
src/utils/: queue.rs
