[package]
name = "MessageBroker"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#Para generar binarios diferentes para el cliente y el server al utilizar cargo build con la flag --bin 
[[bin]]
name = "broker-server"
path = "src/server.rs"

[[bin]]
name = "broker-cliente"
path = "src/cliente.rs"

[dependencies]
#Dependencias para concurrencia, async. 
tonic ="0.7"#paquete para grpc en rust-lang
prost = "0.10"
prost-types = "0.7"
futures = "0.3"
tokio ={version = "1.0", features =["macros", "rt-multi-thread","signal"]}
tokio-stream = "0.1"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.7"
